--- a/deployment/gitkube/myremote.yaml
+++ b/deployment/gitkube/myremote.yaml
@@ -11,12 +11,12 @@ spec:
   deployments:
   - containers:
     - dockerfile: Dockerfile
-      name: app
+      name: springboot.rest
       path: ./
-    name: app
+    name: springboot-rest
   manifests:
     helm: {}
-    path: ../kubernetes/k8s-api-deployment/
+    path: deployment/kubernetes/k8s-api-deployment/
   registry:
     credentials:
       secretKeyRef:
@@ -24,5 +24,5 @@ spec:
       secretRef: regsecret
     url: docker.io/n1c0l4stournier
 status:
-  remoteUrl: "https://github.com/n1c0l4stournier/app.springboot.rest"
+  remoteUrl: "git@github.com:n1c0l4stournier/app.springboot.rest.git"
   remoteUrlDesc: ""
