--- a/deployment/kubernetes/k8s-bdd-deployment/bdd-springboot-rest-deployment.yaml
+++ b/deployment/kubernetes/k8s-bdd-deployment/bdd-springboot-rest-deployment.yaml
@@ -14,6 +14,9 @@ spec:
       containers:
         - name: mysql
           image: mysql:5.7
+          volumeMounts:
+            - mountPath: "/var/lib/mysql"
+              name: mysql
           ports:
             - containerPort: 3306
           env:
@@ -37,3 +40,7 @@ spec:
                 secretKeyRef:
                   name: db-credentials
                   key: mysql-password
+      volumes:
+        - name: mysql
+          persistentVolumeClaim:
+            claimName: mysql-pvc
