--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,14 +1,28 @@
-# This is a sample build configuration for Java (Maven).
-# Check our guides at https://confluence.atlassian.com/x/zd-5Mw for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
 image: maven:3.3.9
 
 pipelines:
   default:
-    - step:
-        caches:
-          - maven
-        script: # Modify the commands below to build your repository.
-          - mvn -B verify # -B batch mode makes Maven less verbose
+    build:
+      - step:
+          caches:
+           - maven
+          script:
+           - mvn --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true test-compile
+    test:
+      - step:
+          caches:
+            - maven
+          script:
+            - mvn --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true verify # -B batch mode makes Maven less verbose
+          services: 
+            - mysql
+
+definitions: 
+  services: 
+    mysql: 
+      image: mysql:5.7 
+      environment: 
+        MYSQL_DATABASE: 'db_rest'
+        MYSQL_RANDOM_ROOT_PASSWORD: 'yes' 
+        MYSQL_USER: 'debian-sys-maint'
+        MYSQL_PASSWORD: '3Xf6hcpbyySgX9Tu'
