--- a/deployment/kubernetes/k8s-api-deployment/app-ingress.yml
+++ b/deployment/kubernetes/k8s-api-deployment/app-ingress.yml
@@ -3,12 +3,12 @@ kind: Ingress
 metadata:
   name: rest-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /api
 spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /api
         backend:
           serviceName: springboot-rest-service
           servicePort: 8080
