--- a/deployment/kubernetes/bdd/db-service.yaml
+++ b/deployment/kubernetes/bdd/db-service.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
-  labels:
-    app: mysql
 spec:
+  type: ClusterIP
   ports:
-    - port: 3306
+  - port: 3306
+    targetPort: 3306
   selector:
     app: mysql
-  clusterIP: None
