--- a/deployment/kubernetes/api/api-deployment.yaml
+++ b/deployment/kubernetes/api/api-deployment.yaml
@@ -1,16 +1,19 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
 spec:
-  replicas: 1
+  replicas: 2
+  selector:
+    matchLabels:
+      app: api
   template:
     metadata:
       labels:
         app: api
     spec:
       containers:
-      - image: n1c0l4stournier/springboot.rest:1.0.0
+      - image: n1c0l4stournier/springboot.rest:latest
         imagePullPolicy: Always
         name: springboot-rest
         env:
